--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 
     <title>FocusTimer 2.0</title>
 
-    <link rel="stylesheet" href="style.css" />
+    <link rel="stylesheet" href="./style.css" />
     <link
       href="https://fonts.googleapis.com/css2?family=Roboto:wght@500&display=swap"
       rel="stylesheet"
